[package]
name = "ioctl"
version = "0.3.3"
authors = ["Corey Richardson <corey@octayn.net>"]
description = "IO Control for POSIX-and-beyond systems"
license = "BSL-1.0/Apache-2.0"
repository = "https://github.com/cmr/ioctl"
documentation = "https://cmr.github.io/ioctl"

[dependencies]
bitflags = "=1.0"
libc = "=0.2"

[features]
unstable = []
